--- a/test-runner.html
+++ b/test-runner.html
@@ -5,8 +5,8 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<link rel="stylesheet" href="qunit/qunit/qunit.css" type="text/css" media="screen">
 	<script type="text/javascript" src="qunit/qunit/qunit.js"></script>
-	<script type="text/javascript" src="test_dependencias.js"></script>
-	<script type="text/javascript" src="dependencias.js"></script>
+	<script type="text/javascript" src="test_powerCatraca.js"></script>
+	<script type="text/javascript" src="powerCatraca.js"></script>
 </head>
 <body>
 	<h1 id="qunit-header">QUnit Test Suite</h1>
