--- a/catraca.htm
+++ b/catraca.htm
@@ -1,7 +1,7 @@
 <html><head>
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
   
-  <title>BNDESNet</title>  
+  <title>NetNet</title>  
   <link rel="stylesheet" type="text/css" href="catraca_arquivos/CalandraRedirect.css">
   
   <style type="text/css">
